--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "server-hosting",
+  "name": "steam-server-aws",
   "version": "0.1.0",
   "bin": {
     "server-hosting": "server-hosting/server-hosting.js"
@@ -10,16 +10,20 @@
     "cdk": "cdk"
   },
   "devDependencies": {
+    "@aws-sdk/client-ec2": "3.45.0",
     "@types/node": "10.17.27",
     "aws-cdk": "^2.3.0",
+    "esbuild": "0.14.10",
     "ts-node": "^9.0.0",
-    "typescript": "~3.9.7",
-    "@aws-sdk/client-ec2": "3.45.0",
-    "esbuild": "0.14.10"
+    "typescript": "~3.9.7"
   },
   "dependencies": {
+    "@aws-cdk/core": "^1.203.0",
+    "@aws-sdk/client-ssm": "^3.635.0",
     "aws-cdk-lib": "^2.3.0",
     "constructs": "^10.0.0",
+    "dotenv": "^16.4.5",
+    "lodash": "^4.17.21",
     "source-map-support": "^0.5.16"
   }
 }
